great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
	box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

header {
	display: inline-block;
	/* border: 2px solid grey; */
	width: 90%;
	margin: 0% 5%;
	text-align: center;
}

nav a {
	text-decoration: none;
	color: lightgrey;
	padding-right: 30px;
	line-height: 10px;
	/* border: 2px solid red; */
}

.logo {
	display: inline-block;
	text-align: right;
	/* border: 2px solid red; */
}

.intro {
	margin: 0% 5%;
	text-align: center;
	/* border: 2px solid blue; */
	
}

.innovation {
	display: inline-block;
	font-size: 80px;
	text-align: center;
	width: 49%;
	/* border: 2px solid green; */
	margin: 10px;
	padding-bottom: 50px;
}

#getStarted {
	position: absolute;
	border: 2px solid lightgrey;
	width: 130px;
	top: 50%;
	font-size: 20px;
	left: 200px;
	top: 450px;
	padding: 4px 0px;
}

.circleImage {
	display: inline-block;
	/* border: 2px solid yellow; */
}



/* header {
	display: inline-block;
	width: 100%;
	text-align: center;
	border: 2px solid grey;
}

nav {
	border: 2px solid grey;
	width: 50%;
	color: lightgrey;
}

#logo {
	display: inline-block;
	border: 2px solid grey;
}

.intro {
	display: inline-block;
	width: 90%;
	margin: 5%;
	border: 2px solid grey;
}

h1 {
	display: inline-block;
	margin: 20px 0;
	font-size: 60px;
	width: 30%;
	text-align: center;
  }

  #getStarted {
	  border: 1px solid grey;
	  width: 30%;
	  padding: 1%;
	  text-align: center;
  }

.innovation {
	display: inline-block;
	margin: auto;
	text-align: center;
	width: 43%;
	border: 2px solid grey;
}  

.circleImage {
	display: inline-block;
	
	width: 42%;
	margin-left: 14%;
	border: 2px solid blue;
	
}   */

/* .borderLines {
	border-top: 2px solid grey;
	border-bottom: 2px solid grey;
	margin: 5% 0%;
} */

.topContent {
	display: inline-block;
	width: 90%;
	margin: 5%;
	border-top: 2px solid grey;
  }

.features {
	display: inline-block;
	width: 49%;
	margin-top: 5%;
}

.about {
	width: 49%;
	display: inline-block;
}

.home {
	display: inline-block;
	border: 2px solid grey;
  }

.bottomContent {
	display: inline-block;
	width: 90%;
	margin: 5%;
	border-bottom: 2px solid grey;
  }

.services {
	width: 33%;
	display: inline-block;
	padding-right: 8px;
	margin-bottom: 5%;
}

.product {
  width: 33%;
  padding-right: 8px;
  display: inline-block;
}

.vision {
  width: 33%;
  display: inline-block;
}

.middle-img {
	display: block;
	/* margin-left: auto;
	margin-right: auto; */
	margin: auto;
	width: 90%;
  }

.contact {
	margin-left: 5%;
  }

footer {
	  text-align: center;
	  margin-top: 5%;
	  margin-bottom: 10%;
  }

